--- a/fotosjurre.html
+++ b/fotosjurre.html
@@ -20,5 +20,11 @@
             <a href="file:///C:/xampp/htdocs/challange2.1/socialsjurre.html">Socials</a>
         </div>
         </article>
+        <img class="fotofamillie" src="463abd90-06ee-4e20-9124-a2f3e3615e11.JPG">
+        <img class="fotoceline" src="IMG-1699.JPG">
+        <img class="fotosharon" src="a36d8a7d-33ea-4e55-89f4-8c177cd4c47d.JPG">
+        <img class="fotoscooter" src="IMG-1620.jpg">
+        <img class="fotoik" src="IMG-1208.JPG">
+        <img class="fotohond" src="IMG-1700.JPG">
     </body>
     </html>
